syntax = "proto3";

package example.v1;

enum BookType {
  NOVEL = 0;
  POEM = 1;
}
